[package]
name = "nero-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [
    "config-toml",
] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-http-resources = { path = "../nero-resources" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri-plugin-shell = "2"
nero-extensions = { path = "../nero-extensions" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
custom-protocol = ["tauri/custom-protocol"]
