[package]
name = "nero-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [
    "config-toml",
] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-http-resources = { path = "../nero-resources" }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
nero-extensions = { path = "../nero-extensions" }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
nero-runtime = { version = "0.1.0", path = "../nero-runtime" }

[features]
custom-protocol = ["tauri/custom-protocol"]
