[package]
name = "nero-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [
    "config-toml",
] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
nero-runtime = { path = "../nero-runtime" }
nero-processors = { path = "../nero-processors" }
nero-extensions = { path = "../nero-extensions" }

[features]
custom-protocol = ["tauri/custom-protocol"]
