[package]
name = "nero-extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
http-body-util = "0.1.3"
nero-types = { path = "../nero-types" }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["sync", "fs"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
wasm-metadata = "0.227.1"
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"
wasmtime-wasi-http = "34.0.1"
