[package]
name = "nero-extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
http-body-util = "0.1.3"
nero-types = { path = "../nero-types" }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
url = { workspace = true }
wasm-metadata = "0.227.1"
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"
wasmtime-wasi-http = "34.0.1"
