[package]
name = "nero-processors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = "1.7.0"
nero-logging = { path = "../nero-logging" }
nero-runtime = { path = "../nero-runtime" }
nero-types = { path = "../nero-types" }
tokio = { workspace = true, features = ["net"] }
url = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
