[package]
name = "tauri-plugin-video-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
m3u8-rs = "6.0.0"
reqwest = { version = "0.12.22", features = ["stream"] }
tauri = { version = "2", default-features = false }
tokio = { version = "1.46.1", features = ["net"] }
url = "2.5.4"
