[package]
name = "tauri-plugin-video-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tauri = { version = "2", default-features = false }
tokio = { version = "1.46.1", features = ["net"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
serde_qs = "0.15.0"
urlencoding = "2.1.3"
