[package]
name = "tauri-plugin-http-resources"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
nero-types = { path = "../nero-types" }
reqwest = { version = "0.12.22", features = ["stream"] }
serde = { workspace = true }
serde_json = "1.0.142"
tauri = { version = "2", default-features = false }
tauri-plugin-shell = { workspace = true }
tokio = { workspace = true, features = ["net"] }
url = { workspace = true }

[dev-dependencies]
serde_qs = "0.15.0"
urlencoding = "2.1.3"
