[package]
name = "nero-extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
http-body-util = "0.1.3"
nero-types = { path = "../types" }
nero-wasi-logging = { path = "../wasi-logging" }
nero-wasm-host = { path = "../wasm-host" }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
url = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
