[package]
name = "nero-extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
nero-wasi-logging = { path = "../wasi-logging" }
nero-wasm-host = { path = "../wasm-host" }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
