[package]
name = "nero-extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
magnet-uri = { workspace = true }
semver = "1.0.27"
nero-wasi-logging = { path = "../wasi-logging" }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
wasm-metadata = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
http-body-util = "0.1.3"
