[package]
name = "nodejs-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
futures = "0.3.31"
is_executable = "1.0.5"
reqwest = { workspace = true, features = ["stream", "json"] }
semver = { workspace = true }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { workspace = true, features = ["process"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
which = "8.0.0"

[target.'cfg(windows)'.dependencies]
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }

[target.'cfg(unix)'.dependencies]
async-compression = { version = "0.4.35", features = ["tokio", "xz"] }
async-tar = "0.5.1"
