[package]
name = "webtorrent-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
nodejs-installer = { path = "../nodejs-installer" }
reqwest = { workspace = true, features = ["json"] }
semver = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
which = { workspace = true }
